--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     -moz-osx-font-smoothing: grayscale;
   }
   a {
-    color: #005f73;
+    color: #001F3F; /* Azul marinho */
     text-decoration: none;
     transition: color 0.3s ease;
   }
   a:hover {
-    color: #0a7f99;
+    color: #003366;
   }
   .container {
     max-width: 1100px;
@@ -37,12 +37,12 @@
 
   /* Header */
   header {
-    background: #005f73;
+    background: #001F3F; /* Azul marinho */
     color: white;
     padding: 70px 20px 80px;
     text-align: center;
     border-radius: 0 0 25px 25px;
-    box-shadow: 0 6px 25px rgba(0, 95, 115, 0.4);
+    box-shadow: 0 6px 25px rgba(0, 31, 63, 0.4);
   }
   header h1 {
     font-family: 'Montserrat', sans-serif;
@@ -60,19 +60,19 @@
   }
   .btn-primary {
     background: white;
-    color: #005f73;
+    color: #001F3F;
     font-weight: 700;
     padding: 18px 48px;
     font-size: 1.2rem;
     border-radius: 35px;
     border: none;
     cursor: pointer;
-    box-shadow: 0 6px 18px rgba(0, 95, 115, 0.3);
+    box-shadow: 0 6px 18px rgba(0, 31, 63, 0.3);
     transition: background-color 0.3s ease, color 0.3s ease;
     display: inline-block;
   }
   .btn-primary:hover {
-    background: #0a7f99;
+    background: #003366;
     color: white;
   }
 
@@ -82,14 +82,14 @@
     padding: 50px 40px;
     border-radius: 25px;
     max-width: 900px;
-    margin: -100px auto 70px; /* sobreposição com header */
-    box-shadow: 0 8px 30px rgba(0, 95, 115, 0.15);
+    margin: -100px auto 70px;
+    box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15);
     text-align: center;
   }
   .about h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2.3rem;
-    color: #005f73;
+    color: #001F3F;
     margin-bottom: 20px;
     font-weight: 700;
   }
@@ -109,7 +109,7 @@
   .services h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2.1rem;
-    color: #005f73;
+    color: #001F3F;
     margin-bottom: 40px;
     font-weight: 700;
     text-align: center;
@@ -125,10 +125,10 @@
     background: white;
     border-radius: 20px;
     padding: 30px 25px;
-    box-shadow: 0 6px 20px rgba(0, 95, 115, 0.1);
+    box-shadow: 0 6px 20px rgba(0, 31, 63, 0.1);
     font-weight: 600;
     font-size: 1.1rem;
-    color: #005f73;
+    color: #001F3F;
     position: relative;
     padding-left: 50px;
   }
@@ -140,7 +140,7 @@
     transform: translateY(-50%);
     font-weight: 900;
     font-size: 1.6rem;
-    color: #005f73;
+    color: #001F3F;
   }
 
   /* Process */
@@ -150,13 +150,13 @@
     margin: 0 auto 80px;
     border-radius: 25px;
     padding: 50px 40px;
-    box-shadow: 0 8px 30px rgba(0, 95, 115, 0.15);
+    box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15);
   }
   .process h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
     font-weight: 700;
-    color: #005f73;
+    color: #001F3F;
     margin-bottom: 40px;
     text-align: center;
   }
@@ -171,15 +171,15 @@
     background: #e6f0f3;
     border-radius: 20px;
     padding: 30px 25px;
-    box-shadow: 0 4px 15px rgba(0, 95, 115, 0.1);
+    box-shadow: 0 4px 15px rgba(0, 31, 63, 0.1);
     text-align: center;
     font-weight: 600;
-    color: #005f73;
+    color: #001F3F;
   }
   .step-number {
     font-size: 2.5rem;
     font-weight: 700;
-    color: #005f73;
+    color: #001F3F;
     margin-bottom: 15px;
   }
   .step-desc {
@@ -199,9 +199,9 @@
     background: white;
     padding: 35px 30px;
     border-radius: 25px;
-    box-shadow: 0 6px 25px rgba(0, 95, 115, 0.12);
+    box-shadow: 0 6px 25px rgba(0, 31, 63, 0.12);
     font-weight: 700;
-    color: #005f73;
+    color: #001F3F;
     font-size: 1.1rem;
     text-align: center;
   }
@@ -215,7 +215,7 @@
   .portfolio h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
-    color: #005f73;
+    color: #001F3F;
     margin-bottom: 40px;
     font-weight: 700;
   }
@@ -229,7 +229,7 @@
     height: 200px;
     border-radius: 20px;
     object-fit: cover;
-    box-shadow: 0 6px 20px rgba(0, 95, 115, 0.12);
+    box-shadow: 0 6px 20px rgba(0, 31, 63, 0.12);
     cursor: pointer;
     transition: transform 0.3s ease;
   }
@@ -244,12 +244,12 @@
     margin: 0 auto 80px;
     border-radius: 25px;
     padding: 50px 40px;
-    box-shadow: 0 8px 30px rgba(0, 95, 115, 0.15);
+    box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15);
   }
   .contact h2 {
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
-    color: #005f73;
+    color: #001F3F;
     font-weight: 700;
     margin-bottom: 40px;
     text-align: center;
@@ -272,12 +272,12 @@
   }
   .contact input:focus, .contact select:focus {
     outline: none;
-    border-color: #005f73;
-    box-shadow: 0 0 10px rgba(0, 95, 115, 0.3);
+    border-color: #001F3F;
+    box-shadow: 0 0 10px rgba(0, 31, 63, 0.3);
   }
   .contact button {
     width: 100%;
-    background: #005f73;
+    background: #001F3F;
     color: white;
     border: none;
     padding: 18px;
@@ -285,11 +285,11 @@
     font-weight: 700;
     border-radius: 35px;
     cursor: pointer;
-    box-shadow: 0 6px 25px rgba(0, 95, 115, 0.5);
+    box-shadow: 0 6px 25px rgba(0, 31, 63, 0.5);
     transition: background-color 0.3s ease;
   }
   .contact button:hover {
-    background: #0a7f99;
+    background: #003366;
   }
 
   /* Footer */
@@ -302,13 +302,13 @@
     font-family: 'Open Sans', sans-serif;
   }
   footer a {
-    color: #005f73;
+    color: #001F3F;
     font-weight: 700;
     margin: 0 10px;
     transition: color 0.3s ease;
   }
   footer a:hover {
-    color: #0a7f99;
+    color: #003366;
   }
 
   /* Responsive */
@@ -349,7 +349,7 @@
   <div class="container">
     <h1>Soares Pinturas - Pintura de Alto Padrão em Uberlândia</h1>
     <p>Transformamos ambientes com acabamento impecável, durabilidade e beleza que impressionam.</p>
-    <a href="https://wa.me/5598981516639" target="_blank" rel="noopener noreferrer" class="btn-primary">
+    <a href="https://wa.me/5534999202880" target="_blank" rel="noopener noreferrer" class="btn-primary">
       Solicite seu Orçamento Grátis
     </a>
   </div>
@@ -436,8 +436,8 @@
 </section>
 
 <footer>
-  <p>Contato: <a href="tel:+5598981516639">+55 (98) 98151-6639</a> | WhatsApp: <a href="https://wa.me/5598981516639" target="_blank" rel="noopener noreferrer">Clique aqui</a></p>
-  <p>Siga-nos no Instagram: <a href="https://instagram.com/soarespinturas" target="_blank" rel="noopener noreferrer">@soarespinturas</a></p>
+  <p>Contato: <a href="tel:+5534999202880">+55 (34) 99920-2880</a> | WhatsApp: <a href="https://wa.me/5534999202880" target="_blank" rel="noopener noreferrer">Clique aqui</a></p>
+  <p>Siga-nos no Instagram: <a href="https://www.instagram.com/soares_pinturas01/profilecard/?igsh=dmx5cWQ1NDlqYWMw" target="_blank" rel="noopener noreferrer">@soares_pinturas01</a></p>
   <p>© 2025 Soares Pinturas - Todos os direitos reservados.</p>
 </footer>
 
