--- a/index.html
+++ b/index.html
@@ -419,10 +419,10 @@
 <section class="portfolio" aria-label="Portfólio">
   <h2>Portfólio de Trabalhos</h2>
   <div class="gallery">
-    <img src="https://soarespinturas.github.io/SOARES-PINTURAS-SITE/img/antes1.jpg" alt="Antes da pintura de fachada residencial" />
-    <img src="https://soarespinturas.github.io/SOARES-PINTURAS-SITE/img/depois1.jpg" alt="Depois da pintura de fachada residencial" />
-    <img src="https://soarespinturas.github.io/SOARES-PINTURAS-SITE/img/antes2.jpg" alt="Antes da pintura de parede interna" />
-    <img src="https://soarespinturas.github.io/SOARES-PINTURAS-SITE/img/depois2.jpg" alt="Depois da pintura de parede interna" />
+    <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/IMG_6256.png alt="Antes da pintura de fachada residencial" />
+    <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/IMG_6337.jpeg alt="Depois da pintura de fachada residencial" />
+    <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/B4976981-CA25-4769-A144-A0D9F97874B9.jpeg alt="Antes da pintura de parede interna" />
+    <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/IMG_3996.jpeg alt="Depois da pintura de parede interna" />
   </div>
 </section>
 
