--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
   <div class="gallery">
     <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/IMG_6256.png alt="Antes da pintura de fachada residencial" />
     <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/IMG_6337.jpeg alt="Depois da pintura de fachada residencial" />
-    <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/B4976981-CA25-4769-A144-A0D9F97874B9.jpeg alt="Antes da pintura de parede interna" />
+    <img src= alt="Antes da pintura de parede interna" />
     <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/IMG_3996.jpeg alt="Depois da pintura de parede interna" />
   </div>
 </section>
