--- a/index.html
+++ b/index.html
@@ -216,35 +216,52 @@
     text-align: center;
   }
 
-  /* Portfolio */
-  .portfolio {
-    max-width: 960px;
-    margin: 0 auto 80px;
+  /* Comparison Slider */
+  .comparison-container {
+    max-width: 800px;
+    margin: 40px auto;
     text-align: center;
   }
-  .portfolio h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
+  .caption {
+    font-weight: bold;
     color: #001F3F;
-    margin-bottom: 40px;
-    font-weight: 700;
+    margin-top: 10px;
   }
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
-    gap: 30px;
-  }
-  .gallery img {
+  .comparison {
+    position: relative;
     width: 100%;
-    height: 200px;
+    overflow: hidden;
     border-radius: 20px;
-    object-fit: cover;
-    box-shadow: 0 6px 20px rgba(0, 31, 63, 0.12);
-    cursor: pointer;
-    transition: transform 0.3s ease;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.15);
   }
-  .gallery img:hover {
-    transform: scale(1.05);
+  .comparison img {
+    display: block;
+    width: 100%;
+    height: auto;
+    user-select: none;
+  }
+  .resize {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    overflow: hidden;
+  }
+  .resize img {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  .slider {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 3px;
+    height: 100%;
+    background: #fff;
+    border: 2px solid #001F3F;
+    cursor: ew-resize;
+    z-index: 10;
   }
 
   /* Contact */
@@ -320,37 +337,6 @@
   footer a:hover {
     color: #003366;
   }
-
-  /* Responsive */
-  @media(max-width: 480px) {
-    header h1 {
-      font-size: 2rem;
-    }
-    .about {
-      margin: -60px 15px 70px;
-      padding: 35px 20px;
-    }
-    .services h2, .process h2, .portfolio h2, .contact h2 {
-      font-size: 1.7rem;
-    }
-    .service-list {
-      grid-template-columns: 1fr;
-      padding: 0 15px;
-    }
-    .steps {
-      flex-direction: column;
-      gap: 30px;
-    }
-    .contact {
-      padding: 40px 20px;
-      margin: 0 15px 60px;
-    }
-    .gallery {
-      grid-template-columns: 1fr;
-      gap: 25px;
-      padding: 0 15px;
-    }
-  }
 </style>
 </head>
 <body>
@@ -359,23 +345,21 @@
   <div class="container">
     <h1>Soares Pinturas - Pintura de Alto Padrão em Uberlândia</h1>
     <p>Transformamos ambientes com acabamento impecável, durabilidade e beleza que impressionam.</p>
-    <a href="https://wa.me/5534999202880" target="_blank" rel="noopener noreferrer" class="btn-primary" aria-label="Solicitar orçamento pelo WhatsApp">
+    <a href="https://wa.me/5534999202880" target="_blank" rel="noopener noreferrer" class="btn-primary">
       Solicite seu Orçamento Grátis
     </a>
-    <a href="https://www.instagram.com/soares_pinturas01/profilecard/?igsh=dmx5cWQ1NDlqYWMw" target="_blank" rel="noopener noreferrer" class="btn-instagram" aria-label="Ver portfólio no Instagram">
+    <a href="https://www.instagram.com/soares_pinturas01/profilecard/?igsh=dmx5cWQ1NDlqYWMw" target="_blank" rel="noopener noreferrer" class="btn-instagram">
       Conheça nosso Portfólio no Instagram
     </a>
   </div>
 </header>
 
-<section class="about" aria-label="Sobre a Soares Pinturas">
+<section class="about">
   <h2>Excelência e Profissionalismo em Cada Detalhe</h2>
-  <p>
-    Na Soares Pinturas, oferecemos serviços especializados em pintura residencial e comercial, sempre com foco na qualidade e satisfação do cliente. Utilizamos materiais premium e técnicas modernas para garantir um acabamento superior que valoriza seu imóvel.
-  </p>
+  <p>Na Soares Pinturas, oferecemos serviços especializados em pintura residencial e comercial, sempre com foco na qualidade e satisfação do cliente. Utilizamos materiais premium e técnicas modernas para garantir um acabamento superior que valoriza seu imóvel.</p>
 </section>
 
-<section class="services container" aria-label="Serviços oferecidos">
+<section class="services container">
   <h2>Nossos Serviços</h2>
   <ul class="service-list">
     <li>Pintura residencial e comercial</li>
@@ -387,46 +371,52 @@
   </ul>
 </section>
 
-<section class="process" aria-label="Processo de trabalho">
+<section class="process">
   <h2>Nosso Processo</h2>
   <div class="steps">
-    <div class="step">
-      <div class="step-number">1</div>
-      <div class="step-desc">Solicite seu orçamento personalizado e gratuito</div>
-    </div>
-    <div class="step">
-      <div class="step-number">2</div>
-      <div class="step-desc">Planejamento detalhado para o seu projeto</div>
-    </div>
-    <div class="step">
-      <div class="step-number">3</div>
-      <div class="step-desc">Execução com profissionais qualificados</div>
-    </div>
-    <div class="step">
-      <div class="step-number">4</div>
-      <div class="step-desc">Entrega com garantia e acompanhamento pós-serviço</div>
-    </div>
+    <div class="step"><div class="step-number">1</div><div class="step-desc">Solicite seu orçamento personalizado e gratuito</div></div>
+    <div class="step"><div class="step-number">2</div><div class="step-desc">Planejamento detalhado para o seu projeto</div></div>
+    <div class="step"><div class="step-number">3</div><div class="step-desc">Execução com profissionais qualificados</div></div>
+    <div class="step"><div class="step-number">4</div><div class="step-desc">Entrega com garantia e acompanhamento pós-serviço</div></div>
   </div>
 </section>
 
-<section class="benefits container" aria-label="Benefícios">
+<section class="benefits container">
   <div class="benefit-item">Acabamento impecável e durabilidade superior</div>
   <div class="benefit-item">Materiais de alta qualidade e tecnologia avançada</div>
   <div class="benefit-item">Equipe experiente e atendimento personalizado</div>
   <div class="benefit-item">Compromisso com prazos e transparência</div>
 </section>
 
-<section class="portfolio" aria-label="Portfólio">
-  <h2>Portfólio de Trabalhos</h2>
-  <div class="gallery">
-    <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/IMG_6256.png alt="Antes da pintura de fachada residencial" />
-    <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/IMG_6337.jpeg alt="Depois da pintura de fachada residencial" />
-    <img src=<img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/B4976981-CA25-4769-A144-A0D9F97874B9.jpeg" alt="Antes da pintura de parede interna" />
-    <img src=https://github.com/Soarespinturas/SOARES-PINTURAS-SITE/blob/main/IMG_3996.jpeg alt="Depois da pintura de parede interna" />
+<section class="portfolio" aria-label="Portfólio Antes e Depois">
+  <h2>Antes e Depois</h2>
+
+  <!-- Fachada -->
+  <div class="comparison-container">
+    <div class="comparison">
+      <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/B7EF5A43-CCA6-4E6D-B19F-5F7F3DC922B1.jpeg" alt="Antes da pintura de fachada" />
+      <div class="resize">
+        <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/DF133949-34F7-4B84-B87E-22B092909B81.jpeg" alt="Depois da pintura de fachada" />
+      </div>
+      <div class="slider"></div>
+    </div>
+    <p class="caption">Fachada</p>
+  </div>
+
+  <!-- Parede Interna -->
+  <div class="comparison-container">
+    <div class="comparison">
+      <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/B7DE496A-F3A8-4BED-8568-F71FC16355A8.jpeg" alt="Antes da pintura de parede interna" />
+      <div class="resize">
+        <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/40F301FA-42D4-4831-B2F3-A11CEF30A0D3.jpeg" alt="Depois da pintura de parede interna" />
+      </div>
+      <div class="slider"></div>
+    </div>
+    <p class="caption">Parede Interna</p>
   </div>
 </section>
 
-<section class="contact" aria-label="Formulário de contato">
+<section class="contact">
   <form action="https://formspree.io/f/your-form-id" method="POST">
     <h2>Solicite seu Orçamento</h2>
     <label for="name">Nome completo</label>
@@ -449,6 +439,17 @@
 </section>
 
 <footer>
-  <p>Contato: <a href="tel:+5534999202880">+55 (34) 99920-2880</a> | WhatsApp: <a href="https://wa.me/5534999202880" target="_blank" rel="noopener noreferrer">Clique aqui</a></p>
-  <p>Siga-nos no Instagram: <a href="https://www.instagram.com/soares_pinturas01/profilecard/?igsh=dmx5cWQ1NDlqYWMw" target="_blank" rel="noopener noreferrer">@soares_pinturas01</a></p>
-  <p>© 2025 Soares Pinturas -
+  <p>Contato: <a href="tel:+5534999202880">+55 (34) 99920-2880</a> | WhatsApp: <a href="https://wa.me/5534999202880" target="_blank">Clique aqui</a></p>
+  <p>Siga-nos no Instagram: <a href="https://www.instagram.com/soares_pinturas01/profilecard/?igsh=dmx5cWQ1NDlqYWMw" target="_blank">@soares_pinturas01</a></p>
+  <p>© 2025 Soares Pinturas - Todos os direitos reservados</p>
+</footer>
+
+<script>
+document.querySelectorAll('.comparison').forEach(function(comparison) {
+  let slider = comparison.querySelector('.slider');
+  let resize = comparison.querySelector('.resize');
+  let dragging = false;
+
+  slider.addEventListener('mousedown', function() {
+    dragging = true;
+  });
