--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <style>
   /* Reset */
-  * {
-    margin: 0; padding: 0; box-sizing: border-box;
-  }
+  * { margin: 0; padding: 0; box-sizing: border-box; }
   body {
     font-family: 'Open Sans', sans-serif;
     background: #f9fafb;
@@ -21,321 +19,95 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-  a {
-    color: #001F3F; /* Azul marinho */
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  a:hover {
-    color: #003366;
-  }
-  .container {
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 40px 20px;
-  }
+  a { color: #001F3F; text-decoration: none; transition: color 0.3s ease; }
+  a:hover { color: #003366; }
+  .container { max-width: 1100px; margin: 0 auto; padding: 40px 20px; }
 
   /* Header */
   header {
-    background: #001F3F; /* Azul marinho */
-    color: white;
-    padding: 70px 20px 80px;
-    text-align: center;
-    border-radius: 0 0 25px 25px;
+    background: #001F3F; color: white; padding: 70px 20px 80px;
+    text-align: center; border-radius: 0 0 25px 25px;
     box-shadow: 0 6px 25px rgba(0, 31, 63, 0.4);
   }
-  header h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 3rem;
-    margin-bottom: 20px;
-    letter-spacing: 0.05em;
-    line-height: 1.2;
-  }
-  header p {
-    font-size: 1.3rem;
-    max-width: 700px;
-    margin: 0 auto 40px;
-    font-weight: 500;
-  }
+  header h1 { font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 3rem; margin-bottom: 20px; letter-spacing: 0.05em; line-height: 1.2; }
+  header p { font-size: 1.3rem; max-width: 700px; margin: 0 auto 40px; font-weight: 500; }
+
   .btn-primary, .btn-instagram {
-    font-weight: 700;
-    padding: 18px 48px;
-    font-size: 1.2rem;
-    border-radius: 35px;
-    border: none;
-    cursor: pointer;
-    box-shadow: 0 6px 18px rgba(0, 31, 63, 0.3);
-    transition: background-color 0.3s ease, color 0.3s ease;
-    display: inline-block;
-    margin: 8px 12px 0 12px;
+    font-weight: 700; padding: 18px 48px; font-size: 1.2rem; border-radius: 35px;
+    border: none; cursor: pointer; box-shadow: 0 6px 18px rgba(0, 31, 63, 0.3);
+    transition: background-color 0.3s ease, color 0.3s ease; display: inline-block; margin: 8px 12px 0 12px;
   }
-  .btn-primary {
-    background: white;
-    color: #001F3F;
-  }
-  .btn-primary:hover {
-    background: #003366;
-    color: white;
-  }
-  .btn-instagram {
-    background: #E4405F; /* Cor do Instagram */
-    color: white;
-  }
-  .btn-instagram:hover {
-    background: #b52f46;
-  }
+  .btn-primary { background: white; color: #001F3F; }
+  .btn-primary:hover { background: #003366; color: white; }
+  .btn-instagram { background: #E4405F; color: white; }
+  .btn-instagram:hover { background: #b52f46; }
 
   /* About */
   .about {
-    background: white;
-    padding: 50px 40px;
-    border-radius: 25px;
-    max-width: 900px;
-    margin: -100px auto 70px;
-    box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15);
-    text-align: center;
+    background: white; padding: 50px 40px; border-radius: 25px; max-width: 900px;
+    margin: -100px auto 70px; box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15); text-align: center;
   }
-  .about h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.3rem;
-    color: #001F3F;
-    margin-bottom: 20px;
-    font-weight: 700;
-  }
-  .about p {
-    font-size: 1.15rem;
-    color: #444;
-    max-width: 700px;
-    margin: 0 auto;
-    line-height: 1.7;
-  }
+  .about h2 { font-family: 'Montserrat', sans-serif; font-size: 2.3rem; color: #001F3F; margin-bottom: 20px; font-weight: 700; }
+  .about p { font-size: 1.15rem; color: #444; max-width: 700px; margin: 0 auto; line-height: 1.7; }
 
-  /* Services */
-  .services {
-    margin: 0 auto 80px;
-    max-width: 960px;
-  }
-  .services h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.1rem;
-    color: #001F3F;
-    margin-bottom: 40px;
-    font-weight: 700;
-    text-align: center;
-  }
-  .service-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
-    gap: 30px;
-    list-style: none;
-    padding-left: 0;
-  }
-  .service-list li {
-    background: white;
-    border-radius: 20px;
-    padding: 30px 25px;
-    box-shadow: 0 6px 20px rgba(0, 31, 63, 0.1);
-    font-weight: 600;
-    font-size: 1.1rem;
-    color: #001F3F;
-    position: relative;
-    padding-left: 50px;
-  }
-  .service-list li::before {
-    content: "✓";
-    position: absolute;
-    left: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-weight: 900;
-    font-size: 1.6rem;
-    color: #001F3F;
-  }
+  /* Services (mantive seus estilos originais) */
+  .services { margin: 0 auto 80px; max-width: 960px; }
+  .services h2 { font-family: 'Montserrat', sans-serif; font-size: 2.1rem; color: #001F3F; margin-bottom: 40px; font-weight: 700; text-align: center; }
+  .service-list { display: grid; grid-template-columns: repeat(auto-fit,minmax(280px,1fr)); gap: 30px; list-style: none; padding-left: 0; }
+  .service-list li { background: white; border-radius: 20px; padding: 30px 25px; box-shadow: 0 6px 20px rgba(0, 31, 63, 0.1); font-weight: 600; font-size: 1.1rem; color: #001F3F; position: relative; padding-left: 50px; }
+  .service-list li::before { content: "✓"; position: absolute; left: 20px; top: 50%; transform: translateY(-50%); font-weight: 900; font-size: 1.6rem; color: #001F3F; }
 
   /* Process */
-  .process {
-    background: white;
-    max-width: 900px;
-    margin: 0 auto 80px;
-    border-radius: 25px;
-    padding: 50px 40px;
-    box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15);
-  }
-  .process h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
-    font-weight: 700;
-    color: #001F3F;
-    margin-bottom: 40px;
-    text-align: center;
-  }
-  .steps {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 40px;
-  }
-  .step {
-    flex: 1 1 160px;
-    background: #e6f0f3;
-    border-radius: 20px;
-    padding: 30px 25px;
-    box-shadow: 0 4px 15px rgba(0, 31, 63, 0.1);
-    text-align: center;
-    font-weight: 600;
-    color: #001F3F;
-  }
-  .step-number {
-    font-size: 2.5rem;
-    font-weight: 700;
-    color: #001F3F;
-    margin-bottom: 15px;
-  }
-  .step-desc {
-    font-size: 1.1rem;
-    line-height: 1.5;
-  }
+  .process { background: white; max-width: 900px; margin: 0 auto 80px; border-radius: 25px; padding: 50px 40px; box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15); }
+  .process h2 { font-family: 'Montserrat', sans-serif; font-size: 2rem; font-weight: 700; color: #001F3F; margin-bottom: 40px; text-align: center; }
+  .steps { display: flex; justify-content: space-between; flex-wrap: wrap; gap: 40px; }
+  .step { flex: 1 1 160px; background: #e6f0f3; border-radius: 20px; padding: 30px 25px; box-shadow: 0 4px 15px rgba(0, 31, 63, 0.1); text-align: center; font-weight: 600; color: #001F3F; }
+  .step-number { font-size: 2.5rem; font-weight: 700; color: #001F3F; margin-bottom: 15px; }
+  .step-desc { font-size: 1.1rem; line-height: 1.5; }
 
   /* Benefits */
-  .benefits {
-    max-width: 960px;
-    margin: 0 auto 80px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
-    gap: 30px;
-  }
-  .benefit-item {
-    background: white;
-    padding: 35px 30px;
-    border-radius: 25px;
-    box-shadow: 0 6px 25px rgba(0, 31, 63, 0.12);
-    font-weight: 700;
-    color: #001F3F;
-    font-size: 1.1rem;
-    text-align: center;
-  }
+  .benefits { max-width: 960px; margin: 0 auto 80px; display: grid; grid-template-columns: repeat(auto-fit,minmax(280px,1fr)); gap: 30px; }
+  .benefit-item { background: white; padding: 35px 30px; border-radius: 25px; box-shadow: 0 6px 25px rgba(0, 31, 63, 0.12); font-weight: 700; color: #001F3F; font-size: 1.1rem; text-align: center; }
 
-  /* Comparison Slider */
-  .comparison-container {
+  /* Portfólio - imagens separadas (Antes / Depois) */
+  .portfolio { max-width: 960px; margin: 0 auto 60px; text-align: center; }
+  .portfolio h2 { font-family: 'Montserrat', sans-serif; font-size: 2rem; color: #001F3F; margin-bottom: 24px; font-weight: 700; }
+  .comparison-container { margin: 30px auto; text-align: center; padding: 0 16px; }
+  .comparison-container h3 { font-size: 1.15rem; color: #001F3F; margin-bottom: 12px; font-weight: 700; }
+  .portfolio-img {
+    width: 100%;
     max-width: 800px;
-    margin: 40px auto;
-    text-align: center;
-  }
-  .caption {
-    font-weight: bold;
-    color: #001F3F;
-    margin-top: 10px;
-  }
-  .comparison {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
+    height: auto;
     border-radius: 20px;
+    object-fit: cover;
     box-shadow: 0 6px 20px rgba(0,0,0,0.15);
-  }
-  .comparison img {
     display: block;
-    width: 100%;
-    height: auto;
-    user-select: none;
+    margin: 0 auto 8px;
   }
-  .resize {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    overflow: hidden;
-  }
-  .resize img {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-  .slider {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 3px;
-    height: 100%;
-    background: #fff;
-    border: 2px solid #001F3F;
-    cursor: ew-resize;
-    z-index: 10;
-  }
+  .caption { font-weight: bold; color: #444; margin-top: 6px; }
 
   /* Contact */
-  .contact {
-    background: white;
-    max-width: 540px;
-    margin: 0 auto 80px;
-    border-radius: 25px;
-    padding: 50px 40px;
-    box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15);
-  }
-  .contact h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
-    color: #001F3F;
-    font-weight: 700;
-    margin-bottom: 40px;
-    text-align: center;
-  }
-  .contact label {
-    display: block;
-    font-weight: 600;
-    margin-bottom: 10px;
-    color: #333;
-  }
-  .contact input, .contact select {
-    width: 100%;
-    padding: 14px 16px;
-    margin-bottom: 30px;
-    border: 2px solid #cbd5db;
-    border-radius: 15px;
-    font-size: 1rem;
-    transition: border-color 0.3s ease, box-shadow 0.3s ease;
-    font-family: 'Open Sans', sans-serif;
-  }
-  .contact input:focus, .contact select:focus {
-    outline: none;
-    border-color: #001F3F;
-    box-shadow: 0 0 10px rgba(0, 31, 63, 0.3);
-  }
-  .contact button {
-    width: 100%;
-    background: #001F3F;
-    color: white;
-    border: none;
-    padding: 18px;
-    font-size: 1.3rem;
-    font-weight: 700;
-    border-radius: 35px;
-    cursor: pointer;
-    box-shadow: 0 6px 25px rgba(0, 31, 63, 0.5);
-    transition: background-color 0.3s ease;
-  }
-  .contact button:hover {
-    background: #003366;
-  }
+  .contact { background: white; max-width: 540px; margin: 0 auto 80px; border-radius: 25px; padding: 50px 40px; box-shadow: 0 8px 30px rgba(0, 31, 63, 0.15); }
+  .contact h2 { font-family: 'Montserrat', sans-serif; font-size: 2rem; color: #001F3F; font-weight: 700; margin-bottom: 40px; text-align: center; }
+  .contact label { display: block; font-weight: 600; margin-bottom: 10px; color: #333; }
+  .contact input, .contact select { width: 100%; padding: 14px 16px; margin-bottom: 30px; border: 2px solid #cbd5db; border-radius: 15px; font-size: 1rem; transition: border-color 0.3s ease, box-shadow 0.3s ease; font-family: 'Open Sans', sans-serif; }
+  .contact input:focus, .contact select:focus { outline: none; border-color: #001F3F; box-shadow: 0 0 10px rgba(0, 31, 63, 0.3); }
+  .contact button { width: 100%; background: #001F3F; color: white; border: none; padding: 18px; font-size: 1.3rem; font-weight: 700; border-radius: 35px; cursor: pointer; box-shadow: 0 6px 25px rgba(0, 31, 63, 0.5); transition: background-color 0.3s ease; }
+  .contact button:hover { background: #003366; }
 
   /* Footer */
-  footer {
-    text-align: center;
-    padding: 30px 20px;
-    font-size: 0.95rem;
-    color: #555;
-    border-top: 1px solid #ddd;
-    font-family: 'Open Sans', sans-serif;
-  }
-  footer a {
-    color: #001F3F;
-    font-weight: 700;
-    margin: 0 10px;
-    transition: color 0.3s ease;
-  }
-  footer a:hover {
-    color: #003366;
+  footer { text-align: center; padding: 30px 20px; font-size: 0.95rem; color: #555; border-top: 1px solid #ddd; font-family: 'Open Sans', sans-serif; }
+  footer a { color: #001F3F; font-weight: 700; margin: 0 10px; transition: color 0.3s ease; }
+  footer a:hover { color: #003366; }
+
+  /* Responsive */
+  @media(max-width: 480px) {
+    header h1 { font-size: 2rem; }
+    .about { margin: -60px 15px 70px; padding: 35px 20px; }
+    .services h2, .process h2, .portfolio h2, .contact h2 { font-size: 1.7rem; }
+    .service-list { grid-template-columns: 1fr; padding: 0 15px; }
+    .steps { flex-direction: column; gap: 30px; }
+    .contact { padding: 40px 20px; margin: 0 15px 60px; }
   }
 </style>
 </head>
@@ -345,12 +117,8 @@
   <div class="container">
     <h1>Soares Pinturas - Pintura de Alto Padrão em Uberlândia</h1>
     <p>Transformamos ambientes com acabamento impecável, durabilidade e beleza que impressionam.</p>
-    <a href="https://wa.me/5534999202880" target="_blank" rel="noopener noreferrer" class="btn-primary">
-      Solicite seu Orçamento Grátis
-    </a>
-    <a href="https://www.instagram.com/soares_pinturas01/profilecard/?igsh=dmx5cWQ1NDlqYWMw" target="_blank" rel="noopener noreferrer" class="btn-instagram">
-      Conheça nosso Portfólio no Instagram
-    </a>
+    <a href="https://wa.me/5534999202880" target="_blank" rel="noopener noreferrer" class="btn-primary">Solicite seu Orçamento Grátis</a>
+    <a href="https://www.instagram.com/soares_pinturas01/profilecard/?igsh=dmx5cWQ1NDlqYWMw" target="_blank" rel="noopener noreferrer" class="btn-instagram">Conheça nosso Portfólio no Instagram</a>
   </div>
 </header>
 
@@ -388,33 +156,35 @@
   <div class="benefit-item">Compromisso com prazos e transparência</div>
 </section>
 
+<!-- === Seção ANTES / DEPOIS (substitui o antigo portfólio) === -->
 <section class="portfolio" aria-label="Portfólio Antes e Depois">
   <h2>Antes e Depois</h2>
 
-  <!-- Fachada -->
   <div class="comparison-container">
-    <div class="comparison">
-      <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/B7EF5A43-CCA6-4E6D-B19F-5F7F3DC922B1.jpeg" alt="Antes da pintura de fachada" />
-      <div class="resize">
-        <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/DF133949-34F7-4B84-B87E-22B092909B81.jpeg" alt="Depois da pintura de fachada" />
-      </div>
-      <div class="slider"></div>
-    </div>
-    <p class="caption">Fachada</p>
+    <h3>Antes da Fachada</h3>
+    <img class="portfolio-img" src="img/fachada-antes-800px.jpeg" alt="Antes da pintura de fachada" />
+    <p class="caption">Fachada — Antes</p>
   </div>
 
-  <!-- Parede Interna -->
   <div class="comparison-container">
-    <div class="comparison">
-      <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/B7DE496A-F3A8-4BED-8568-F71FC16355A8.jpeg" alt="Antes da pintura de parede interna" />
-      <div class="resize">
-        <img src="https://raw.githubusercontent.com/Soarespinturas/SOARES-PINTURAS-SITE/main/40F301FA-42D4-4831-B2F3-A11CEF30A0D3.jpeg" alt="Depois da pintura de parede interna" />
-      </div>
-      <div class="slider"></div>
-    </div>
-    <p class="caption">Parede Interna</p>
+    <h3>Depois da Fachada</h3>
+    <img class="portfolio-img" src="img/fachada-depois-800px.jpeg" alt="Depois da pintura de fachada" />
+    <p class="caption">Fachada — Depois</p>
+  </div>
+
+  <div class="comparison-container">
+    <h3>Antes da Parede Interna</h3>
+    <img class="portfolio-img" src="img/parede-antes-800px.jpeg" alt="Antes da pintura de parede interna" />
+    <p class="caption">Parede Interna — Antes</p>
+  </div>
+
+  <div class="comparison-container">
+    <h3>Depois da Parede Interna</h3>
+    <img class="portfolio-img" src="img/parede-depois-800px.jpeg" alt="Depois da pintura de parede interna" />
+    <p class="caption">Parede Interna — Depois</p>
   </div>
 </section>
+<!-- ========================================================= -->
 
 <section class="contact">
   <form action="https://formspree.io/f/your-form-id" method="POST">
@@ -444,12 +214,5 @@
   <p>© 2025 Soares Pinturas - Todos os direitos reservados</p>
 </footer>
 
-<script>
-document.querySelectorAll('.comparison').forEach(function(comparison) {
-  let slider = comparison.querySelector('.slider');
-  let resize = comparison.querySelector('.resize');
-  let dragging = false;
-
-  slider.addEventListener('mousedown', function() {
-    dragging = true;
-  });
+</body>
+</html>
